# hipo-drf-exceptions

./: .travis.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
hipo_drf_exceptions/: __init__.py  apps.py  exceptions.py  handlers.py  middlewares.py  settings.py
test_project/: pytest.ini
test_project/posts/: exceptions.py  models.py  serializers.py  tests.py  urls.py  views.py
test_project/posts/migrations/: 0001_initial.py
test_project/test_project/: settings.py  urls.py
test_project/users/: models.py  serializers.py  tests.py  urls.py  views.py
test_project/users/migrations/: 0001_initial.py
tests/: test_hipo_drf_exceptions.py  test_settings.py
tests/test_app/: models.py  serializers.py  urls.py  views.py
